force-app/main/default/objects/nFORCE__Option__c/nFORCE__Option__c.object-meta.xml
<CustomObject>
    <description>Answer options for the questionnaire framework.</description>
    <label>Option</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>