force-app/main/default/objects/nFORCE__Option__c/fields/nFORCE__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. The admin populates it via the Questionnaire Admin. If true this value will be selected as the default selection.</description>
    <label>Is Default?</label>
    <type>Checkbox</type>
</CustomField>