force-app/main/default/objects/nFORCE__Option__c/fields/nFORCE__Label__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Label__c</fullName>
    <description>This field is required. The admin populates it via the Questionnaire Admin. It is the abel displayed to the user while viewing the possible options of a question.</description>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>