force-app/main/default/objects/nFORCE__Option__c/fields/nFORCE__Question__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is automatically set when the admin creates an option in the Questionnaire Admin. It relates an option to a question.</description>
    <label>Question</label>
    <referenceTo>nFORCE__Question__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>